trunk/Archive2/cc/adc5307135c8e8/output
main.cpp:12:9: error: rvalue reference to type 'const int' cannot bind to lvalue of type 'int'
    foo(a); // error, the expression 'a' is an lvalue; rvalue references cannot bind to lvalues
        ^
main.cpp:8:26: note: passing argument to parameter here
    void foo(int const &&);
                         ^
1 error generated.
